<resources>
    <string name="app_name">StudentRegistrstionApp</string>
    <string name="student_reg">Student Registration</string>
    <string name="student_name">Name</string>
    <string name="student_age">Age</string>
    <string name="student_gender">Gender</string>
    <string name="student_standard">Standerd</string>
    <string name="student_add">Add</string>
    <string name="registration_form">Regsitration Form</string>
    <string name="student_List">Student List</string>

</resources>