<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="student"
            type="com.example.studentregistrstionapp.data.Student" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_8">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:text="@string/student_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNameValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8"
            android:text="@{student.name}"
            app:layout_constraintLeft_toRightOf="@+id/tvName"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Chithra" />

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:text="@string/student_age"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvAgeValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8"
            android:text="@{``+ student.age}"
            app:layout_constraintLeft_toRightOf="@+id/tvAge"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            tools:text="15 yrs" />

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:text="@string/student_gender"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAge" />

        <TextView
            android:id="@+id/tvGenderValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{student.gender}"
            android:layout_marginLeft="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8"
            app:layout_constraintLeft_toRightOf="@+id/tvGender"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAge"
            tools:text="Female" />

        <TextView
            android:id="@+id/tvStandard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:text="@string/student_standard"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGender" />

        <TextView
            android:id="@+id/tvStandardValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8"
            android:text="@{``+student.standard}"
            app:layout_constraintLeft_toRightOf="@+id/tvStandard"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGender"
            tools:text="10th" />


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:layout_marginTop="@dimen/space_8"
            android:background="@color/purple_700"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStandardValue" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>